# PersistenceForest

./: .gitignore  README.md  pyproject.toml
classification_benchmarks/: featurize_point_clouds.py  generate_loop_tendril_point_clouds.py  loop_tendrils.py
examples/: 3d_PersForest_Example.ipynb  animation_tutorial.ipynb  benchmark.py  paper-examples.ipy  pers_forest_example.py
examples/classification_benchmarks/: loop_families.py  loop_tendrils.py  plotting.py  sampling.py
examples/tendril_regression/: featurize_point_clouds.py  generate_loop_tendril_point_clouds.py  loop_tendril_regression.ipynb  sampling.py
loopforest/: PersistenceForest.py  __init__.py  color_scheme.py  cycle_rep_vectorisations.py  interior_activity_plotting.py  simplicial_filtration_plotting.py
persforest/: PersistenceForest.py  forest_landscapes.py  forest_plotting.py  simplicial_filtration_plotly.py  simplicial_filtration_plotting.py
persistence_forest/: LoopForest.py  PersistenceForest.py  forest_landscapes.py  forest_plotting.py
