[project]
name = "persforest"
version = "0.1.0"
description = ""
authors = [
    {name = "Leon Renkin",email = "leon.renkin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "gudhi (>=3.11.0,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[project.optional-dependencies]
plotly = [
    "plotly (>=6.6.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
]
notebook = [
    "plotly (>=6.6.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)", 
    "ipywidgets (>=8.1.7,<9.0.0)", 
    "anywidget (>=0.9.18,<1.0.0)"
]
examples = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
]
animation = [
    "pillow (>=10.0.0,<12.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
